hw2/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: log-app-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            exact: /log
          method:
            exact: POST
      fault:
        delay:
          fixedDelay: 2s
          percentage:
            value: 100
      timeout: 1s
      retries:
        attempts: 2
        perTryTimeout: 0.5s
      route:
        - destination:
            host: log-app-service
            port:
              number: 80
    - name: get-root
      match:
        - uri:
            exact: /
          method:
            exact: GET
      route:
        - destination:
            host: log-app-service
            port:
              number: 80

    - name: get-status
      match:
        - uri:
            exact: /status
          method:
            exact: GET
      route:
        - destination:
            host: log-app-service
            port:
              number: 80

    - name: get-logs
      match:
        - uri:
            exact: /logs
          method:
            exact: GET
      route:
        - destination:
            host: log-app-service
            port:
              number: 80

    - name: not-found
      directResponse:
        status: 404
        body:
          string: "404 not found\n"
